@@ -1,3 +1,8 @@
+2013-01-22         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkfts.c (S_ISREG): Define macro if not defined. Portability.
+	* inplace.c (S_ISREG): Ditto.
+
 2013-01-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* readfile.c (do_readfile): Free `text' if read fails. Thanks to
